@@ -15,11 +15,15 @@ class ContainerContractTest {
                 "AS backend-build",
                 "COPY Dockerfile .dockerignore ./",
                 "COPY --from=backend-build",
-                "FROM eclipse-temurin:25-jre-alpine",
-                "apk add --no-cache curl",
+                "FROM eclipse-temurin:25-jre-noble",
+                "apt-get install -y --no-install-recommends curl",
                 "USER 10001:10001");
-        assertThat(dockerfile).doesNotContain("apt-get");
+        assertThat(dockerfile).doesNotContain("apk add", "-alpine");
         assertThat(dockerfile).contains("/actuator/health/liveness");
+        assertThat(dockerfile).contains(
+                "ENTRYPOINT [\"java\", "
+                        + "\"--enable-native-access=ALL-UNNAMED\", "
+                        + "\"-jar\", \"/app/application.jar\"]");
         assertThat(dockerfile).doesNotContain("ENV SPRING_DATASOURCE_PASSWORD");
         assertThat(dockerfile).doesNotContain("ENV TELEGRAM_BOT_TOKEN");
 
